--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.29.1",
-    "globals": "^15.8.0"
+    "globals": "^15.8.0",
+    "jest": "^29.7.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest"
   },
-  "author": "",
+  "author": "Stesh",
   "license": "ISC"
 }
